infrastructure/kubernetes/sonarqube/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sonarqube
  labels:
    app: sonarqube
    environment: development
